fix social gap

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -81,7 +81,7 @@
       font-weight: 600;
     }
     &__items {
-      gap: toRem(16);
+      gap: toRem(25);
       width: fit-content;
       @media (min-width: em(390)) {
         display: grid;
